<resources>
    <string name="app_name">Deck</string>

    <string name="default_work">Cá nhân</string>
    <string name="add_new_work">THÊM CÔNG VIỆC</string>
    <string name="add_new_task">THÊM TÁC VỤ</string>
    <string name="new_work">Thêm công việc</string>
    <string name="more_info">Thông tin</string>
    <string name="new_task">THÊM TÁC VỤ</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>
    <string name="name">Tên</string>
    <string name="description">Mô tả</string>
    <string name="logout">Đăng xuất</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="details">Chi tiết</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="delete">Xóa</string>
    <string name="search">Tìm kiếm</string>
    <string name="chooseLevel">Chọn mức độ</string>
    <string name="url_server">http://192.168.1.144:8080/apps/kmaassignwork/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cloud">this is cloud</string>
    <string name="connect_to_server">Connect to server</string>
    <string name="server">Sever address</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_to_server">Welcome to server</string>
</resources>