<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="workItem"
            type="com.example.app.database.model.WorkItem" />
        <variable
            name="activity"
            type="com.example.app.MainActivity2" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_work"
            android:textColor="@color/primary"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text="@={workItem.work_name}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:text="@={workItem.work_description}" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/save"
                android:background="@drawable/primary_button"
                android:onClick="@{() -> activity.onSaveWork(workItem)}" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:background="@drawable/second_button"
                android:text="@string/cancel"
                android:onClick="@{() -> activity.onCancelWork()}" />

        </LinearLayout>
    </LinearLayout>
</layout>
